add errata